Add Mandarin section with Hanzi practice card

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
       </a>
     </div>
 
+    <h2 style="margin-top:28px">國語 Mandarin</h2>
+    <div class="grid">
+      <a class="card" href="./Mandarin/Hanzi-Quest/">
+        <span class="tag">App</span>
+        <div class="title">漢字練習（描紅闖關）</div>
+        <div class="desc">打開就能用 · 支援離線（PWA）· 自訂字表匯入。</div>
+      </a>
+    </div>
+
     <!-- 未來可以繼續加其他科目區塊（english, science...） -->
   </div>
 </body>
