--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <div class="grid">
       <a class="card" href="./Mandarin/Hanzi-Quest/">
         <span class="tag">App</span>
-        <div class="title">漢字練習（描紅闖關）</div>
-        <div class="desc">打開就能用 · 支援離線（PWA）· 自訂字表匯入。</div>
+        <div class="title">國語生字練習（手寫版）</div>
+        <div class="desc">描紅闖關、支援離線（PWA）、可匯入自訂字表。</div>
       </a>
     </div>
 
