--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <h2 style="margin-top:28px">國語 Mandarin</h2>
     <div class="grid">
-      <a class="card" href="./Mandarin/Hanzi-Quest/">
+     <a class="card" href="/learning-lab/Mandarin/Hanzi-Quest/">
         <span class="tag">App</span>
         <div class="title">國語生字練習（手寫版）</div>
         <div class="desc">描紅闖關、支援離線（PWA）、可匯入自訂字表 。</div>
