--- a/Mandarin/Hanzi-Quest/index.html
+++ b/Mandarin/Hanzi-Quest/index.html
@@ -36,6 +36,12 @@
         <span id="result" aria-live="polite"></span>
       </div>
 
+      <label style="margin-left:8px">
+        <input type="checkbox" id="showFeedback" checked>
+        顯示錯誤區域
+        </label>
+
+
       <div class="row">
         <details>
           <summary>匯入自訂字表（每行一個字）</summary>
