--- a/Mandarin/Hanzi-Quest/index.html
+++ b/Mandarin/Hanzi-Quest/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Hanzi-Quest — 闖關學字、升級打怪</title>
   <link rel="manifest" href="manifest.webmanifest">
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css?v=20251024" />
   <meta name="theme-color" content="#ffffff" />
 </head>
 <body>
@@ -61,7 +61,7 @@
     <small>本頁面可離線使用（安裝到主畫面可更流暢）。不蒐集個資。</small>
   </footer>
 
-  <script src="app.js"></script>
+  <script src="app.js?v=20251024"></script>
   <script>
     // 註冊 Service Worker（可離線，用不到也沒差）
     if ('serviceWorker' in navigator) {
