--- a/index.html
+++ b/index.html
@@ -21,12 +21,21 @@
     <h1>learning-lab 教學入口</h1>
     <p>請點選想要的教材。</p>
 
-    <h2>數學 Math</h2>
+    <h2>數學</h2>
     <div class="grid">
       <a class="card" href="./math/九九乘法練習/">
         <span class="tag">App</span>
         <div class="title">九九乘法練習（觸控版）</div>
         <div class="desc">1–12 範圍、側邊乘法表、數字鍵盤與音效回饋。</div>
+      </a>
+    </div>
+
+        <h2>國語</h2>
+    <div class="grid">
+      <a class="card" href="./word/">
+        <span class="tag">App</span>
+        <div class="title">部件快反練習</div>
+        <div class="desc">以認讀以及選字的方式認識部件</div>
       </a>
     </div>
 
