--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
       </a>
     </div>
 
-        <h2>國語</h2>
-    <div class="grid">
-      <a class="card" href="./word/">
-        <span class="tag">App</span>
-        <div class="title">部件快反練習</div>
-        <div class="desc">以認讀以及選字的方式認識部件</div>
-      </a>
-    </div>
+<h2>國語 Chinese</h2>
+<div class="grid">
+  <a class="card" href="./word/">
+    <span class="tag">App</span>
+    <div class="title">部件快反練習（語音版）</div>
+    <div class="desc">看→說純語音；聽→找四選一；大按鈕＋音效，適合觸控。</div>
+  </a>
+</div>
+
 
 
 
