--- a/index.html
+++ b/index.html
@@ -17,27 +17,30 @@
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <h1>learning-lab 教學入口</h1>
-    <p>請點選想要的教材。</p>
+<div class="wrap">
+  <h1>learning-lab 教學入口</h1>
+  <p>請點選想要的教材。</p>
 
-    <h2>數學</h2>
-    <div class="grid">
-      <a class="card" href="./math/九九乘法練習/">
-        <span class="tag">App</span>
-        <div class="title">九九乘法練習（觸控版）</div>
-        <div class="desc">1–12 範圍、側邊乘法表、數字鍵盤與音效回饋。</div>
-      </a>
-    </div>
+  <h2>數學 Math</h2>
+  <div class="grid">
+    <a class="card" href="./math/九九乘法練習/">
+      <span class="tag">App</span>
+      <div class="title">九九乘法練習（觸控版）</div>
+      <div class="desc">1–12 範圍、側邊乘法表、數字鍵盤與音效回饋。</div>
+    </a>
+  </div>
 
-<h2>國語 Chinese</h2>
-<div class="grid">
-  <a class="card" href="./word/">
-    <span class="tag">App</span>
-    <div class="title">部件快反練習（語音版）</div>
-    <div class="desc">看→說純語音；聽→找四選一；大按鈕＋音效，適合觸控。</div>
-  </a>
+  <!-- ✅ 國語區塊放在 wrap 裡 -->
+  <h2>國語 Chinese</h2>
+  <div class="grid">
+    <a class="card" href="./word/">
+      <span class="tag">App</span>
+      <div class="title">部件快反練習（語音版）</div>
+      <div class="desc">看→說語音模式；聽→找四選一；支援平板教學。</div>
+    </a>
+  </div>
 </div>
+
 
 
 
