--- a/word/index.html
+++ b/word/index.html
@@ -32,6 +32,16 @@ hr{border:none;border-top:1px solid #2a323c;margin:12px 0}
 body.big .btn{padding:16px 22px;font-size:20px}
 body.big .choice{padding:24px;font-size:32px}
 body.big .choice.glyph{font-size:110px}
+.mode-see .app{max-width:min(1200px,90vw);padding:24px 24px 120px}
+.mode-see #prompt{font-size:clamp(120px,22vw,260px)}
+.mode-see .panel{min-height:80vh;display:flex;flex-direction:column;justify-content:center}
+
+.mode-hear #prompt{font-size:clamp(24px,4vw,44px)}
+.mode-hear .choice{padding:16px;font-size:26px}
+.mode-hear .choice.glyph{font-size:clamp(48px,14vw,80px)}
+body.big.mode-hear .btn{padding:12px 16px;font-size:18px}
+.mode-hear .toolbar.bottom{padding:12px 10px}
+.mode-hear #mic{display:none}
 </style>
 </head>
 <body class="big">
@@ -104,6 +114,12 @@ let SR = null; let rec = null; let voiceEnabled = false;
 
 const BANK = window.RADICALS;
 const GROUPS = window.GROUPS;
+
+// 根據模式切換版面響應（看→說放大、聽→找縮小＆隱藏麥克風）
+function syncModeUI(){
+  document.body.classList.toggle('mode-see', mode===MODE.SEE_SAY);
+  document.body.classList.toggle('mode-hear', mode===MODE.HEAR_PICK);
+}
 
 // ---- 小工具 ----
 const rng = (n) => Math.floor(Math.random() * n);
@@ -188,7 +204,12 @@ function updateStats(){ const rate = total? Math.round(100*correct/total):0; are
 
 // 事件綁定
 btnNext.onclick = nextQuestion;
-btnToggleMode.onclick = ()=>{ mode = (mode===MODE.SEE_SAY)? MODE.HEAR_PICK : MODE.SEE_SAY; btnToggleMode.textContent = (mode===MODE.SEE_SAY? '模式：看→說' : '模式：聽→找'); nextQuestion(); };
+btnToggleMode.onclick = ()=>{
+  mode = (mode===MODE.SEE_SAY)? MODE.HEAR_PICK : MODE.SEE_SAY;
+  btnToggleMode.textContent = (mode===MODE.SEE_SAY? '模式：看→說' : '模式：聽→找');
+  syncModeUI();
+  nextQuestion();
+};
 
 // 單鍵語音控制（mic 按鈕：開始作答 ↔ 送出答案）
 (function setupMic(){
@@ -218,6 +239,7 @@ btnToggleMode.onclick = ()=>{ mode = (mode===MODE.SEE_SAY)? MODE.HEAR_PICK : MOD
   };
 })();
 
+syncModeUI();
 updateStats();
 nextQuestion();
 </script>
