--- a/word/index.html
+++ b/word/index.html
@@ -32,17 +32,17 @@ hr{border:none;border-top:1px solid #2a323c;margin:12px 0}
 body.big .btn{padding:16px 22px;font-size:20px}
 body.big .choice{padding:24px;font-size:32px}
 body.big .choice.glyph{font-size:110px}
-.mode-see .app{max-width:min(1200px,90vw);padding:24px 24px 120px}
+.mode-see .app{max-width:min(1200px,92vw);padding:24px 24px 120px}
 .mode-see #prompt{font-size:clamp(120px,22vw,260px)}
 .mode-see .panel{min-height:80vh;display:flex;flex-direction:column;justify-content:center}
 
 .mode-hear #prompt{font-size:clamp(36px,6vw,56px);margin-top:4vh;margin-bottom:2vh;text-align:center}
 .mode-hear .choice{padding:18px;font-size:min(6vw,30px)}
 .mode-hear .choice.glyph{font-size:clamp(64px,12vw,100px)}
-body.big.mode-hear .btn{padding:10px 14px;font-size:16px}
-.mode-hear .toolbar.bottom{padding:12px 10px}
+body.big.mode-hear .btn{padding:16px 22px;font-size:20px}
+.mode-hear .toolbar.bottom{padding:16px 12px}
 .mode-hear #mic{display:none}
-.mode-hear .app{max-width:min(1200px,95vw);padding:24px 24px 120px}
+.mode-hear .app{max-width:min(1200px,92vw);padding:24px 24px 120px}
 .mode-hear .panel{min-height:70vh;display:flex;flex-direction:column;justify-content:center}
 /* A：一排四個（響應式仍保持單排） */
 .mode-hear .choices{display:grid;grid-template-columns:repeat(4,minmax(0,1fr));gap:14px;align-items:stretch;justify-items:stretch}
@@ -51,7 +51,8 @@ body.big.mode-hear .btn{padding:10px 14px;font-size:16px}
 .mode-hear .choice.glyph{font-size:clamp(56px,10vw,96px);font-weight:900}
 .mode-hear .choice:hover{outline:2px solid rgba(48,209,88,.5)}
 /* D：整體按鍵略縮小（已覆寫） */
-body.big.mode-hear .btn{padding:10px 14px;font-size:16px}
+body.big.mode-hear .btn{padding:16px 22px;font-size:20px}
+.toolbar.bottom .btn{padding:16px 22px;font-size:20px}
 </style>
 </head>
 <body class="big">
