Fix glyph name for 辶部 in index.html

--- a/word/index.html
+++ b/word/index.html
@@ -87,7 +87,7 @@ window.RADICALS = [
   { glyph: "口", name: "口部",   group: "mouth" },
   { glyph: "木", name: "木部",   group: "wood" },
   { glyph: "忄", name: "心部",   group: "heart" },
-  { glyph: "辶", name: "走部",   group: "walk" },
+  { glyph: "辶", name: "辵部",   group: "walk" },
   { glyph: "刂", name: "刀部",   group: "knife" },
   { glyph: "灬", name: "火部",   group: "fire" },
   { glyph: "糹", name: "糸部",   group: "silk" },
