--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
   <div class="grid">
     <a class="card" href="./math/九九乘法練習/">
       <span class="tag">App</span>
-      <div class="title">九九乘法練習（觸控版）</div>
+      <div class="title">九九乘法練習</div>
       <div class="desc">1–12 範圍、側邊乘法表、數字鍵盤與音效回饋。</div>
+    </a>
+  </div>
+
+    <div class="grid">
+    <a class="card" href="./math/比大小/">
+      <span class="tag">App</span>
+      <div class="title">比大小</div>
+      <div class="desc">訓練自動化快速判斷兩數大小</div>
     </a>
   </div>
 
